force-app/main/default/objects/ProdKind__c/ProdKind__c.object-meta.xml
<CustomObject>
    <label>Kind of Products</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kind of Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>