force-app/main/default/objects/ProdKind__c/fields/GrProduct__c.field-meta.xml
<CustomField>
    <fullName>GrProduct__c</fullName>
    <label>GrProduct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>