force-app/main/default/objects/ProdKind__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <formula>VALUE(ID_ERP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Kind ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>