force-app/main/default/objects/ProdKind__c/fields/ProductsClassifier__c.field-meta.xml
<CustomField>
    <fullName>ProductsClassifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Products Classifier</label>
    <referenceTo>ProductsClassifier__c</referenceTo>
    <relationshipLabel>Kind of Products</relationshipLabel>
    <relationshipName>Kind_of_Products</relationshipName>
    <type>Lookup</type>
</CustomField>