force-app/main/default/objects/ProdKind__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ID__c</columns>
    <columns>NAME</columns>
    <columns>NameUKR__c</columns>
    <columns>ProductsClassifier__c</columns>
    <columns>GrProduct__c</columns>
    <columns>BusinessDivision__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>